# 3DRenderer

./: .gitignore  README.md
raytracer/: raytracer.cpp
rendering-pipeline/: CMakeLists.txt
rendering-pipeline/src/: camera.h  color.h  geometry.cpp  geometry.h  light.h  main.cpp  material.h  mesh.h  renderer.cpp  renderer.h  scene.cpp  scene.h  vertex.h  window.cpp  window.h
rendering-pipeline/src/math/: mat4.h  vec3.h  vec4.h
